2010-06-13 j.m.reneau <renejm@users.sourceforge.net> 0.9.6o
	* added spritev - visible function
	* added spriteslice - extract a sprite from the screen and demo program
	* changed sprite to be not visible when created - so that is can be moved and so that it does not change the screen when sliced out.

2010-06-09 j.m.reneau <renejm@users.sourceforge.net> 0.9.6n
	* fixed several memory leaks with strings from stack and variable assignments
	* added sprites - spritedim, spriteload, spritemove, spriteplace, spritex, spritey, spritew, spriteh, and spritecollide

2010-06-07 j.m.reneau <renejm@users.sourceforge.net> 0.9.6m
	* fixed linux compile with lib espeak
	* added logic to parser to allow for whitespace before a label - to allow older examples to run

2010-06-01 j.m.reneau <renejm@users.sourceforge.net> 0.9.6l
	* fixed help display path when windows installed.
	* added getslice, putslice, and imgload into syntax highlighter
	* changed imgload from 0.9.6k to place the center of the image at the specified coordinates
	* added rotate and scale parameters to imgload like stamp

2010-05-31 j.m.reneau <renejm@users.sourceforge.net> 0.9.6k (377)

	* added imgload statement to load a bmp, gif, jpg, or pgn from a file and siaplsy it on the graphics output window
	* compiled new ru translation from Sergey

2010-05-25 j.m.reneau <renejm@users.sourceforge.net> 0.9.6j (376)

	* added ability to enter integers in code with 0[bB][01] for binary 0[oO][0-7] for octal and 0[xX][0-9a-fA-F] for hexidecimal

2010-05-18 j.m.reneau <renejm@users.sourceforge.net> 0.9.6i (374)

	* added dialog to verify overwriting file
	* added dialog to verify loading program and loosing changes
	* changed new dialog to only appear if unsaved changes are in buffer
	* added dialog on close to verify loosing changes (both exit and window close)
	* added undo and redo to menu and toolbar for editor
	* changed genhelp.list to make all ids and see also links lowercase - for LINUX
