@@ -5,8 +5,8 @@ for t = 1 to 50
    imgload graphwidth*rand, graphheight*rand, 1 + t/10, "help.png"
 next t
 a = 0
-for t = 0 to 10 * pi step .15
-   imgload 150,150, t/ pi , t, "help.png"
+for t = 0 to 50
+   imgload 150, 150, t / 5 , 2 * pi / (t / 50), "help.png"
    pause .01
 next t
 
